--- a/package.json
+++ b/package.json
@@ -6,14 +6,10 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "babel -w src -d lib",
     "build": "tsc"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
-    "babel-preset-flow": "^6.23.0"
+    "typescript": "^4.1.2"
   },
   "author": "",
   "license": "ISC"
