--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "tsc",
     "format": "prettier --write --ignore-unknown src"
   },
+  "dependencies": {
+    "tslib": "^2.0.3"
+  },
   "devDependencies": {
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
