--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elow",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,6 +9,9 @@
     "build": "tsc",
     "format": "prettier --write --ignore-unknown src"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "tslib": "^2.0.3"
   },
@@ -18,8 +21,6 @@
     "prettier": "^2.2.0",
     "typescript": "^4.1.2"
   },
-  "author": "",
-  "license": "ISC",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
